# microbest

./: .gitignore  .hadolint.yaml  .pre-commit-config.yaml  Makefile  README.md  compose.dev.yaml  compose.prod.yaml  compose.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml  docker-compose.yaml  docker-compose.yml  pyproject.toml
.just/: _index.just  _share.just  compose.just  dependencies.just  elasticsearch.just  git.just  grafana.just  jaeger.just  kafka.just  kibana.just  kong.just  nginx.just  otel_collector.just  prometheus.just  script.just  service_1.just  service_2.just
apps/protos/: .pre-commit-config.yaml  service_2.proto
apps/service_1/: .air.apis.toml  .air.events.toml  .dockerignore  .golangci.yaml  .pre-commit-config.yaml  Dockerfile  go.mod  go.sum  pyproject.toml
apps/service_1/api/: urls.py  views.py
apps/service_1/api/compiled_protos/: service_2_pb2.py  service_2_pb2.pyi  service_2_pb2_grpc.py
apps/service_1/api/http/: endpoints.go  server.go
apps/service_1/cmd/api/: main.go
apps/service_1/cmd/apis/: main.go
apps/service_1/cmd/events/: main.go
apps/service_1/cmd/ginserver/: main.go
apps/service_1/cmd/http/: main.go
apps/service_1/events/: handlers.py
apps/service_1/events/management/commands/: listen_my_topic.py
apps/service_1/internal/apis/: app.go  endpoints.go  server.go
apps/service_1/internal/conf/: configs.go
apps/service_1/internal/events/: app.go  handlers.go  server.go
apps/service_1/internal/ginserver/: endpoints.go  engine.go  server.go
apps/service_1/internal/helpers/: configs.go  logger.go  otel.go
apps/service_1/internal/helpers/confighelper/: setup.go
apps/service_1/internal/helpers/loghelper/: encoders.go  setup.go
apps/service_1/internal/helpers/otelhelper/: setup.go
apps/service_1/internal/logger/: configure.go
apps/service_1/internal/pb/service2pb/: service_2.pb.go  service_2_grpc.pb.go
apps/service_1/main_app/: asgi.py  wsgi.py
apps/service_1_old/: pyproject.toml
apps/service_1_old/main_app/: settings.py  urls.py
apps/service_2/: .dockerignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
apps/service_2/src/apis/: app.py  cmd.py  end_points.py
apps/service_2/src/fast_api/: server.py
apps/service_2/src/fastapi/: app.py  end_points.py  server.py
apps/service_2/src/helpers/: configs.py  logger.py  otel.py
apps/service_2/src/pb/service_2/: service_2_pb2.py  service_2_pb2.pyi  service_2_pb2_grpc.py
apps/service_2/src/rpc/: app.py  server.py  services.py
apps/service_2/src/rpc/compiled_protos/: service_2_pb2.py
apps/service_2/src/rpcs/: app.py  cmd.py  services.py
configs/docker_configs/: otel_collector.yaml
configs/docker_envs/: elasticsearch.env  jaeger.env  kibana.env  service_2.env
scripts/compose_checker/: main.sh
scripts/dir_checker/: _empty_validator.py  _init_py_validator.py  _logger.py  dir_checker.py  main.py
scripts/file_checker/: _func_validator.py  file_checker.py
scripts/python_checker/: _func_validator.py  _import_validator.py  _msg_validator.py  main.py
settings/compose/: .env
settings/configs/: grafana.ini  kong.yaml.template  nginx.conf.template  otel_collector.yaml  prometheus.yaml  service_1_supervisord.conf  service_2_supervisord.conf
settings/docker_compose/: .env
settings/elasticsearch/: .env
settings/entrypoints/: kong.sh  nginx.sh
settings/envs/: docker_compose.env  elasticsearch.env  jaeger.env  kafka.env  kibana.env  kong.env  service_1.env  service_2.env
settings/grafana/: .env  config.ini  entrypoint.sh
settings/grafana/provisioning/dashboards/: opentelemetry_collector.json
settings/grafana/provisioning/datasources/: elasticsearch.yaml  jaeger.yaml  prometheus.yaml
settings/jaeger/: .env  config.yaml  entrypoint.sh
settings/kafka/: .env
settings/kibana/: .env  entrypoint.sh
settings/kibana/provisioning/: import.sh
settings/kibana/provisioning/dashboards/: logs.ndjson
settings/kibana/provisioning/data_views/: logs.ndjson
settings/kong/: .env  config.yaml.template  entrypoint.sh
settings/nginx/: default.conf.template
settings/otel_collector/: config.yaml
settings/prometheus/: entrypoint.sh
settings/service_1/: .env  entrypoint.sh  entrypoint_dev.sh  entrypoint_prod.sh  supervisord.conf
settings/service_2/: .env  entrypoint.sh  supervisord.conf
src/protos/: service_2.proto
src/service_1/: Dockerfile  manage.py  pyproject.toml  requirements.txt
src/service_1/api/: urls.py  views.py
src/service_1/events/: handlers.py
src/service_1/helpers/: configs.py  logger.py
src/service_1/main_app/: apps.py  settings.py  urls.py
src/service_1/utils/: logger.py  otel.py
src/service_2/: .dockerignore  Dockerfile  fastapi_server.py  pyproject.toml  requirements.txt
src/service_2/fast_api/: end_points.py  server.py
src/service_2/helpers/: configs.py  logger.py  otel.py
src/service_2/rpc/: server.py  services.py
(+1 files in other folders)
