# =========================
# Project
# =====
[project]
name = "service_2"
version = "0.0.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "supervisor==4.2.5",
    "fastapi==0.115.12",
    "uvicorn==0.34.0",
    "grpcio==1.71.0",
    "grpcio-tools==1.71.0",
    "mypy-protobuf==3.6.0",
    "kafka-python==2.1.4",
    "opentelemetry-sdk==1.31.1",
    "opentelemetry-exporter-otlp==1.31.1",
    "opentelemetry-instrumentation-logging==0.52b1",
    "opentelemetry-instrumentation-fastapi==0.52b1",
    "opentelemetry-instrumentation-grpc==0.52b1",
    "opentelemetry-instrumentation-kafka-python==0.52b1",
]

# =========================
# UV
# =====
[tool.uv]
package = false
